- Added some images and colors that were missing

--- a/wear/src/main/res/values/colors.xml
+++ b/wear/src/main/res/values/colors.xml
@@ -2,6 +2,8 @@
 <resources>
     <color name="digital_background">@color/primary</color>
     <color name="digital_text">#ffffff</color>
+    <color name="background_blue">#1ca8f4</color>
+    <color name="white_transparent">#99ffffff</color>
 
     <!-- using the "Light Blue" Material Palette -->
     <color name="primary">#03A9F4</color>  <!-- 500 -->
